Fix nav z-index, wrap; reverse timeline; clean css
Tweak css color values to lowercase hex
Make certain elements not text selectable for better cursor experience
Reverse the timeline to show newer tweets first

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,28 +2,30 @@ nav {
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
-  height: 120px;
-  padding: 0 1.5em 0.5em;
+  background-color: #4056a1;
+  color: #ffffff;
+  padding: 0.5em 1.5em;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+  z-index: 2;
 }
 
 nav > span {
   font-family: Bungee, monospace;
   font-size: 2rem;
+  user-select: none;
 }
 .nav-quick-tweet {
+  width: 16ch;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .nav-quick-tweet > a {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 .nav-quick-tweet > a > span {
@@ -32,5 +34,5 @@ nav > span {
 .nav-quick-tweet > a > i {
   display: block;
   text-align: center;
-  color: orangered;
+  color: #ff4500;
 }
