--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -34,11 +34,12 @@ margin-bottom: 0.2em;
   display: flex;
   justify-content: space-between;
   font-family: Bungee, serif;
+  user-select: none;
 }
 
 .new-tweet form div button {
   background-color: #4056A1;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 0.2em 0.5em;
   border: unset;
 }
@@ -48,8 +49,8 @@ margin-bottom: 0.2em;
 }
 #error-block > div {
   display: flex;
-  border: 4px solid red;
-  color: red;
+  border: 4px solid #ff0000;
+  color: #ff0000;
   justify-content: center;
   align-items: center;
   text-align: center;
