--- a/public/styles/timeline.css
+++ b/public/styles/timeline.css
@@ -1,7 +1,7 @@
 #timeline {
   margin-top: 4rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 2rem;
 }
 .tweet {
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  user-select: none;
 }
 .tweet figure {
   display: flex;
@@ -40,10 +41,11 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  border-top: 4px solid black;
+  border-top: 4px solid #000000;
   padding: 0.5rem 1.5rem 1rem;
   font-weight: 600;
   font-size: 0.8em;
+  user-select: none;
 }
 .tweet footer time {
   opacity: 70%;
@@ -53,5 +55,5 @@
   background-color: unset;
 }
 .tweet footer button:hover {
-  color: goldenrod;
+  color: #daa520;
 }
